# minesolver

./: .gitignore  CMakeLists.txt  CellDisplay.cpp  CellDisplay.h  Encapsulation.h  MainWindow.cpp  MineDisplay.cpp  MineDisplay.h  MineStateAnalyzer.cpp  MineStateMachine.cpp  MineStateMachine.h  MinefieldData.cpp  MinefieldData.h  MinefieldDisplay.cpp  MinefieldDisplay.h  Minesolver.pro  PathChooser.cpp  PathChooser.h  README.md  RandomNumbers.cpp  RandomNumbers.h  TODO.txt
lib/debug/: gtest.lib
lib/release/: gtest.lib
main/: SolverMain.cpp
main/ui_backend/: AppState.h  MinefieldTableModel.cpp  MinefieldTableModel.h
qml/: GameBoard.qml  GameView.qml  main.qml
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/game/: MineStatus.h  Minefield.cpp  Minefield.h  TraversableGrid.cpp  TraversableGrid.h
src/core/solver/: AutoPlayer.cpp  AutoPlayer.h  ChoiceColumn.cpp  ChoiceColumn.h  ChoiceNode.cpp  ChoiceNode.h  ObviousCellFlagger.cpp  ObviousCellFlagger.h  PathChooser.cpp  PathChooser.h  PotentialMinefield.h  Solver.cpp  Solver.h  SolverFloat.h  SolverMath.cpp  SolverMath.h  SolverMinefield.cpp  SolverMinefield.h
src/core/utils/: ProgressProxy.cpp  ProgressProxy.h
src/game/: MineStatus.h  Minefield.cpp  Minefield.h  MinefieldData.cpp  MinefieldData.h  TraversableGrid.cpp  TraversableGrid.h  game.pri
src/gui/: CMakeLists.txt  SolverMain.cpp
src/gui/qml/: AspectPreserver.qml  CellDetailsDisplay.qml  GameBoard.qml  GameDashboard.qml  GameOverOverlay.qml  GameStatusPanel.qml  GameView.qml  NewBoardDialog.qml  main.qml
src/gui/ui_backend/: AppState.cpp  AppState.h  MinefieldImageProvider.cpp  MinefieldImageProvider.h  MinefieldTableModel.cpp  MinefieldTableModel.h
src/main/: main.pri
src/solver/: ChoiceColumn.cpp  ChoiceColumn.h  ChoiceNode.cpp  ChoiceNode.h  MineStateAnalyzer.h  MineStateMachine.h  PathChooser.cpp  PathChooser.h  PotentialMinefield.cpp  PotentialMinefield.h  Solver.cpp  Solver.h  solver.pri
src/ui/: CellDisplay.cpp  CellDisplay.h  MainWindow.cpp  MainWindow.h  MinefieldDisplay.cpp  MinefieldDisplay.h  ui.pri
src/ui_backend/: AppState.cpp  AppState.h  MinefieldTableModel.cpp  MinefieldTableModel.h
src/utils/: RandomNumbers.cpp  RandomNumbers.h  utils.pri
test/: CMakeLists.txt  TestMain.cpp  TestTest.cpp  TestingFramework.h  test.pri
test/tests/: AutoPlayerTest.cpp  SolverTest.cpp
